# Rewriter

./: .env.example  .gitignore  claude-pro.cmd  claude-vertex.cmd  output.txt  pyproject.toml
.claude/: settings.local.json
.claude/skills/rewrite/: SKILL.md
data/: style_guide.json  style_guide.md
development_sessions/: 2026-02-23_cost_estimation.md  2026-02-23_style_analysis.md
input_resources/: EVE_Online_Nullsec_War_Report.md  RAMpocalypse.md  RAMpocalypsy_and_gaming.md
output_results/: EVE_Online_Nullsec_War_Report.md  RAMpocalypse.md  RAMpocalypse_light.md  RAMpocalypsy_and_gaming.md
src/rewriter/: __init__.py  __main__.py  cli.py  config.py
src/rewriter/analyzer/: examples.py  prompts.py  sampler.py  style_extractor.py
src/rewriter/corpus/: models.py  stats.py  store.py
src/rewriter/importer/: cleaner.py  wordpress.py
src/rewriter/llm/: batch.py  client.py
src/rewriter/rewrite/: engine.py  prompts.py
