[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewriter"
version = "0.1.0"
description = "Style transfer framework: analyze blog style and rewrite text to match it"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "anthropic>=0.42",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "scikit-learn>=1.4",
    "tiktoken>=0.8",
    "joblib>=1.3",
]

[project.scripts]
rewriter = "rewriter.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rewriter"]
